--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
 	mavenLocal()
 	mavenCentral()
 	maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
+	maven { url 'https://repo.spring.io/milestone' }
+	maven { url 'https://repo.spring.io/snapshot' }
 }
 
 dependencies {
