--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,9 @@ buildscript {
 	repositories {
 		mavenLocal()
 		mavenCentral()
-		maven{ url 'https://maven.aliyun.com/nexus/content/groups/public/'}
+		maven { url 'https://repo.spring.io/milestone' }
+		maven { url 'https://repo.spring.io/snapshot' }
+		maven { url 'https://maven.aliyun.com/nexus/content/groups/public/' }
 	}
 }
 
