--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -66,7 +66,7 @@ jobs:
     strategy:
       matrix:
         java-version: [ 17, 18 ]
-        os: [ windows-latest, macos-latest, ubuntu-latest ]
+        os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
@@ -89,7 +89,7 @@ jobs:
     strategy:
       matrix:
         java-version: [ 17, 18 ]
-        os: [ macos-latest, ubuntu-latest ]
+        os: [ ubuntu-latest ]
     steps:
       - uses: actions/checkout@v2
       - name: Set up JDK
