--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -36,12 +36,16 @@ jobs:
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
-      - name: authenticate to k3s
+  deploy-to-kubernetes:
+    needs: build-and-push-docker-image
+    name: Build Docker image and push to repositories
+    runs-on: ubuntu-latest
+    steps:
+      - name: Authenticate to k3s
         uses: Azure/k8s-set-context@v1
         with:
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
-        # Deploy the Docker image to the k3s cluster
       - name: Deploy to k3s
         run: |-
-          kubectl set image deployment/hoteler-api hoteler-api=ghcr.io/damingerdai/hoteler:${{ github.sha }}
-          kubectl rollout status deployment/hoteler-api
+          kubectl set image deployment/hoteler-api hoteler-api=ghcr.io/damingerdai/hoteler:${{ github.sha }} -n hoteler-namespace
+          kubectl rollout status deployment/hoteler-api -n hoteler-namespace
